Last-minute changes ordered by PCF: switched demo video, made permalink invisible in widget, made universalsubtitles.org default site instead of www., and fixed subtitle positioning problem.

--- a/media/css/mirosubs-widget.css
+++ b/media/css/mirosubs-widget.css
@@ -10,13 +10,13 @@ outline: none !important;
 
 }
 
-
 .mirosubs-widget {
    font-family: Arial, Helvetica, sans-serif !important;
    font-size: 12px !important;
    color: #000 !important;
    line-height: 16px !important;
    width: 400px !important;
+   position: relative;
 }
 
 
@@ -691,7 +691,6 @@ ul.mirosubs-titlesList.sync {
 
 .mirosubs-captionDiv {
     position: absolute !important;
-    top: 235px !important;
     left: 10px !important;
     width: 360px !important;
 letter-spacing: .04em !important;
